--- a/src/components/Statistics/Statistics.module.css
+++ b/src/components/Statistics/Statistics.module.css
@@ -1,4 +1,7 @@
 .statistics {
+  max-width: 500px;
+  margin-right: auto;
+  margin-left: auto;
   text-align: center;
   border: 1px black solid;
 }
@@ -6,7 +9,7 @@
 .title {
   text-transform: uppercase;
   font-size: 20px;
-  margin-bottom: 30px;
+  margin-bottom: 16px;
 }
 
 .statList {
@@ -16,4 +19,24 @@
   align-items: center;
   justify-content: center;
   list-style: none;
+}
+
+.item {
+  display: flex;
+  flex-direction: column;
+  padding: 15px;
+  background-color: teal;
+}
+
+.label {
+  margin-bottom: 10px;
+  font-size: 16px;
+  font-weight: 500px;
+  color: white;
+}
+
+.percentage {
+  font-size: 24px;
+  font-weight: 700px;
+  color: white;
 }
